Added device selection to TigerGraph plugin installation script

--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -642,9 +642,12 @@ help:
 	@echo "  Debug cppdemo"
 	@echo ""
 	@echo "-------- Options --------"
-	@echo "DEBUG: 1: build application in debug mode. 0: build application in release mode."
-	@echo "graph: graph input .mtx file"
-	@echo "alveoProject: Alveo project name without .par.proj extension"
-	@echo "numPars: Number of partitions (default=1)"
-	@echo "numDevices: Number of devices (default=1)"
+	@echo "DEBUG          : 1: build application in debug mode. 0: build application in release mode."
+	@echo "graph          : graph input .mtx file"
+	@echo "alveoProject   : Alveo project name without .par.proj extension"
+	@echo "deviceNames    : Target device name. Supported devices: "
+	@echo "                 xilinx_u50_gen3x16_xdma_201920_3"
+	@echo "                 xilinx_u55c_gen3x16_xdma_base_2"
+	@echo "numPars        : Number of partitions (default=1)"
+	@echo "numDevices     : Number of devices (default=1)"
 	@echo "communityOutput: Output file for detected communities"
