Updated louvain cpp example to work with new driver/worker assignement code

--- a/louvainmod/examples/cpp/Makefile
+++ b/louvainmod/examples/cpp/Makefile
@@ -73,8 +73,9 @@ cppdemo: cppdemo.cpp
 
 graph = ../data/as-Skitter-wt-r100.mtx
 alveoProject = $(basename $(notdir $(graph)))
-numPars=1
-numDevices=1
+numNodes = 1
+numPars = 1
+numDevices = 1
 deviceNames="xilinx_u50_gen3x16_xdma_201920_3"
 xclbin=$(XILINX_LOUVAIN)/${PRODUCT_VER}/xclbin/louvainmod_pruning_xilinx_u50_gen3x16_xdma_201920_3.xclbin
 workers=192.168.1.21 192.168.1.31
@@ -110,7 +111,7 @@ run-load-compute-driver: cppdemo
 	. $(XILINX_XRT)/setup.sh; \
 	. $(XILINX_XRM)/setup.sh; \
 	LD_LIBRARY_PATH=$(LIB_PATH):$(LD_LIBRARAY_PATH); \
-	./cppdemo -x $(xclbin) -fast -num_devices $(numDevices) -devices $(deviceNames) \
+	./cppdemo -x $(xclbin) -fast -num_nodes $(numNodes) -num_devices $(numDevices) -devices $(deviceNames) \
 	    -num_level 100 -num_iter 100 -load_alveo_partitions \
 	    $(alveoProject).par.proj -setwkr 2 $(workers) -driverAlone
 
@@ -122,7 +123,7 @@ run-load-compute-worker1: cppdemo
 	. $(XILINX_XRT)/setup.sh; \
 	. $(XILINX_XRM)/setup.sh; \
 	LD_LIBRARY_PATH=$(LIB_PATH):$(LD_LIBRARAY_PATH); \
-	./cppdemo -x $(xclbin) -fast -num_devices $(numDevices) -devices $(deviceNames) \
+	./cppdemo -x $(xclbin) -fast -num_nodes $(numNodes) -num_devices $(numDevices) -devices $(deviceNames) \
 	    -num_level 100 -num_iter 100 -load_alveo_partitions \
 	    $(alveoProject).par.proj -workerAlone 1
 
@@ -134,7 +135,7 @@ run-load-compute-worker2: cppdemo
 	. $(XILINX_XRT)/setup.sh; \
 	. $(XILINX_XRM)/setup.sh; \
 	LD_LIBRARY_PATH=$(LIB_PATH):$(LD_LIBRARAY_PATH); \
-	./cppdemo -x $(xclbin) -fast -num_devices $(numDevices) -devices $(deviceNames) \
+	./cppdemo -x $(xclbin) -fast -num_nodes $(numNodes) -num_devices $(numDevices) -devices $(deviceNames) \
 	    -num_level 100 -num_iter 100 -load_alveo_partitions \
 	    $(alveoProject).par.proj -workerAlone 2
 
@@ -154,18 +155,19 @@ help:
 	@echo ""
 	@echo "  Run test in a 3 node cluster"
 	@echo "  ssh to driver"
-	@echo "  make run-load-compute-driver"
+	@echo "  make run-load-compute-driver [numNodes=1]"
 	@echo ""
 	@echo "  ssh to worker1"
-	@echo "  make run-load-compute-worker1"
+	@echo "  make run-load-compute-worker1 [numNodes=1]"
 	@echo ""
 	@echo "  ssh to worker2"
-	@echo "  make run-load-compute-worker2"
+	@echo "  make run-load-compute-worker2 [numNodes=1]"
 	@echo ""
 	@echo "-------- Options --------"
 	@echo "graph: graph input .mtx file"
-	@echo "alveoProject: Alveo project name without .par.proj extension"
-	@echo "numPars: Number of partitions (default=1)"
-	@echo "numDevices: Number of devices (default=1)"	
-	@echo "workers: set IP adresses for workers"
+	@echo "alveoProject : Alveo project name without .par.proj extension"
+    @echo "numNodes     : Number of nodes (default=1)"
+	@echo "numPars      : Number of partitions (default=1)"
+	@echo "numDevices   : Number of devices (default=1)"	
+	@echo "workers      : set IP adresses for workers"
 
