1. Fixed an issue when the target device is not the first device 2. Updated cosinesim/recomengine to version 1.4

--- a/cosinesim/Makefile
+++ b/cosinesim/Makefile
@@ -78,7 +78,7 @@ $(JAVA_API_DOC_JAR): $(JAVA_API_JAR)
 CCC = g++
 CXX = g++
 CXXFLAGS = -std=c++11 -fPIC -Wall -Wno-unknown-pragmas -Wno-unused-label \
-           -Wno-narrowing -D USE_HBM -fmessage-length=0 -D COSINESIM 
+           -Wno-narrowing -D USE_HBM -fmessage-length=0 -D COSINESIM -D VERSION=\"$(PRODUCT_VER)\"
 
 # Define the target directories.
 
@@ -613,7 +613,9 @@ help:
 	@echo ""
 	@echo "  make run-test [numDevices=1] [iterations=1] [numVectors=5000] [deviceNames=xilinx_u50_gen3x16_xdma_201920_3]"
 	@echo "      Run standalone test with statically linked executable. numDevices, numVectors, and iterations are optional."
-	@echo "      Supported deviceNames: xilinx_u50_gen3x16_xdma_201920_3 xilinx_u55c_gen3x16_xdma_base_1 "
+	@echo "      Supported deviceNames: "
+	@echo "      xilinx_u50_gen3x16_xdma_201920_3"
+	@echo "      xilinx_u55c_gen3x16_xdma_base_1 "
 	@echo ""
 	@echo "  make xclbin DEVICE=<FPGA platform>"
 	@echo "      Build xclbin file targetting specified device. Vitis tool and PLATFORM_REPO_PATHS must be set to make xclbin."
