--- a/cosinesim/examples/cpp/Makefile
+++ b/cosinesim/examples/cpp/Makefile
@@ -14,6 +14,8 @@
 # limitations under the License.
 #
 
+SHELL := /bin/bash
+
 # Run make using "make DEBUG=1" to build debuggable executables
 
 # Location of cosine similarity Alveo product 
