--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -87,6 +87,7 @@ INCLUDES_libLouvain = \
 	-I$(GRAPH_ANALYTICS_DIR)/L3/include \
 	-isystem $(GRAPH_ANALYTICS_DIR)/ext/HLS_arbitrary_Precision_Types/include \
 	-I$(GRAPH_ANALYTICS_DIR)/ext/xcl2 \
+	-I$(GRAPH_ANALYTICS_DIR)/ext \
 	-I$(GRAPH_ANALYTICS_DIR)/plugin/tigergraph/comdetect/udf/QueryUdf \
 #	-I${JAVA_HOME}/include \
 #	-I${JAVA_HOME}/include/linux
@@ -288,6 +289,7 @@ INCLUDES_test = \
 	-I$(XILINX_XRM)/include \
 	-I$(GRAPH_ANALYTICS_DIR)/L2/include \
 	-I$(GRAPH_ANALYTICS_DIR)/L3/include \
+	-I$(GRAPH_ANALYTICS_DIR)/ext \
 	-I$(GRAPH_ANALYTICS_DIR)/ext/xcl2 \
 	-isystem $(GRAPH_ANALYTICS_DIR)/ext/HLS_arbitrary_Precision_Types/include 
 
@@ -571,6 +573,11 @@ $(STAGE_XCLBIN_FILE_U50): $(XCLBIN_FILE_U50)
 $(STAGE_XCLBIN_FILE_U55): $(XCLBIN_FILE_U55)
 	cp -f $^ $@
 
+STAGE_XILINX_APPS_COMMON = $(STAGE_DIR)/include/xilinx_apps_common.hpp
+XILINX_APPS_COMMON = $(GRAPH_ANALYTICS_DIR)/ext/xilinx_apps_common.hpp
+$(STAGE_XILINX_APPS_COMMON): $(XILINX_APPS_COMMON)
+	cp -f $^ $@
+
 # Top-level packaging rule
 
 STAGE_SUBDIR_NAMES = include lib src xclbin
@@ -581,6 +588,7 @@ STAGE_ALL_FILES = \
     $(STAGE_XCLBIN_FILE_U50) \
 	$(STAGE_XCLBIN_FILE_U55) \
     $(STAGE_DIR)/$(STAGE_EXAMPLE_ZIP) \
+	$(STAGE_XILINX_APPS_COMMON)
 
 # make staging areaing in two steps so intermediate outputs can be included in the 
 # staging output as well.
