Consolidated -fast/-fast2/-num_cu/-prun into a signle option -kernel_mode

--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -342,11 +342,11 @@ endif
 deviceNames=xilinx_u50_gen3x16_xdma_201920_3
 ifeq ($(deviceNames),xilinx_u50_gen3x16_xdma_201920_3)
     XCLBIN_RUN = $(CURDIR)/staging/xclbin/louvainmod_pruning_xilinx_u50_gen3x16_xdma_201920_3.xclbin
-	KERNEL_MODE = -fast
+	KERNEL_MODE = -kernel_mode 2
 endif
 ifeq ($(deviceNames),xilinx_u55c_gen3x16_xdma_base_2)
     XCLBIN_RUN = $(CURDIR)/staging/xclbin/louvainmod_2cu_xilinx_u55c_gen3x16_xdma_2_202110_1.xclbin
-	KERNEL_MODE = -fast2 -num_cu 2
+	KERNEL_MODE = -kernel_mode 4
 endif
 
 CMDLINE_CREATE_PARTITIONS = $(graph) $(KERNEL_MODE) -num_pars $(numPars) -create_alveo_partitions \
