Added louvainmod xclbin for U55C

--- a/L2/louvainmod_2cu_u55c_kernel/Makefile
+++ b/L2/louvainmod_2cu_u55c_kernel/Makefile
@@ -199,10 +199,10 @@ $(BUILD_DIR)/kernel_louvain.xclbin: $(BINARY_CONTAINER_kernel_louvain_OBJS)
 	$(VPP) -l $(VPP_FLAGS) --temp_dir $(BUILD_DIR) --report_dir $(BUILD_REPORT_DIR)/kernel_louvain $(VPP_LDFLAGS) $(VPP_LDFLAGS_kernel_louvain) -o '$@' $(+)
 
 # Add kernel alias to xclbin post-build so that the same kernel targeting different devices can be differentiated.
-	rm -f $(BUILD_DIR)/kernel_louvain_alias.xclbin
+	rm -f $(BUILD_DIR)/kernel_louvain_2cu_u55c_alias.xclbin
 	/opt/xilinx/xrt/bin/xclbinutil -i $(BUILD_DIR)/kernel_louvain.xclbin \
 								   --key-value=USER:kernel_louvain:'{"alias": "kernel_louvain_2cu_u55"}' \
-	                               -o $(BUILD_DIR)/kernel_louvain_alias.xclbin
+	                               -o $(BUILD_DIR)/kernel_louvain_2cu_u55c_alias.xclbin
 
 # ################# Setting Rules for Host (Building Host Executable) ################
 $(EXE_FILE): $(HOST_SRCS) | check_xrt
