--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -450,7 +450,7 @@ XCLBIN_INSTALLED_U50 =/opt/xilinx/apps/graphanalytics/louvainmod/1.0/xclbin/$(XC
 L2_TOP_DIR_U55 = $(GRAPH_ANALYTICS_DIR)/L2/louvainmod_2cu_u55c_kernel
 L2_XDEVICE_U55 = xilinx_u55c_gen3x16_xdma_2_202110_1
 L2_BUILD_DIR_U55 = $(L2_TOP_DIR_U55)/build_dir.hw.$(L2_XDEVICE_U55)
-XCLBIN_NAME_U55 = kernel_louvain_alias.xclbin
+XCLBIN_NAME_U55 = kernel_louvain_2cu_u55c_alias.xclbin
 XCLBIN_FILE_U55 = $(L2_BUILD_DIR_U55)/$(XCLBIN_NAME_U55)
 XCLBIN_INSTALLED_NAME_U55 = louvainmod_2cu_$(L2_XDEVICE_U55).xclbin
 XCLBIN_INSTALLED_U55 =/opt/xilinx/apps/graphanalytics/louvainmod/1.0/xclbin/$(XCLBIN_INSTALLED_NAME_U55)
