--- a/L2/louvainmod_pruning_kernel/.gitignore
+++ b/L2/louvainmod_pruning_kernel/.gitignore
@@ -1,1 +1,2 @@
-/build_dir.hw.xilinx_u50_gen3x16_xdma_201920_3/
+/build_dir.hw.xilinx_u50_gen3x16_xdma_201920_3/*
+!/build_dir.hw.xilinx_u50_gen3x16_xdma_201920_3/*.vclf
