--- a/plugin/tigergraph/comdetect/examples/comdetect/Makefile
+++ b/plugin/tigergraph/comdetect/examples/comdetect/Makefile
@@ -16,14 +16,13 @@
 deviceNames=xilinx_u50_gen3x16_xdma_201920_3
 dataSource=$(CURDIR)/data/as-Skitter-wt-r100.mtx
 graphName=social_$(USER)
-alveoProject=""
+alveoProject=
 
 numPartitionsNode=9
 
-compileMode=0
+compileMode=1
 partitionMode=3
-runMode=1
-
+runMode=2
 
 ifdef sshKey
     SSH_KEY_OPT=-i $(sshKey)
@@ -75,6 +74,9 @@ run: .install-udf-done
 	@echo "-------------------------------------------------------"
 	@echo "Running run.sh from staging "
 	@echo "-------------------------------------------------------"
+ifeq ($(alveoProject),)
+	$(error "ERROR: alveoProject must be set to a pathname accessiable by all nodes")
+endif	
 	cd ../../ && make DEBUG=$(DEBUG) stage && \
 	    ./staging/examples/comdetect/bin/run.sh -v \
 	    -g $(graphName) -s $(dataSource) -a $(alveoProject) \
@@ -107,17 +109,17 @@ help:
 	@echo "alveoProject      : partition files path / partition file name prefix"
 	@echo "numPartitionsNode : Number of Alveo partitions per node"
 	@echo ""
-	@echo "compileMode       : 0: recreate database and compile all (default)"
-	@echo "                    1: only compile query gsql"
-	@echo "                    2: skip database creation and gsql compilation"
+	@echo "compileMode       : 0: skip database creation and gsql compilation"
+	@echo "                    1: recreate database and compile all (default)"
+	@echo "                    2: only compile query gsql"
 	@echo "partitionMode     : 0: Use existing partitions from disks; "
 	@echo "                    1: Generate partitions from TigerGraph memory"
 	@echo "                    2: Generate partitions from .mtx file"
 	@echo "                    3: Generate partitions from TigerGraph using whole-graph technique (default)"
-	@echo "runMode           : 0: Run only on CPU"
-	@echo "                    1: Run only on Alveo (default)"
-	@echo "                    2: Run on both CPU and Alveo"
-	@echo "                    3: Skip both CPU and Alveo run (i.e. only run partition)"
+	@echo "runMode           : 0: Skip both CPU and Alveo run (i.e. only run partition)"
+	@echo "                    1: Run only on CPU"
+	@echo "                    2: Run only on Alveo (default)"
+	@echo "                    3: Run on both CPU and Alveo"
 	@echo ""
 	@echo "sshKey            : SSH key for user tigergraph"	
 	@echo ""
